--- a/PracticeProject/pom.xml
+++ b/PracticeProject/pom.xml
@@ -23,6 +23,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>3.1.1</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
